--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>50f Brand</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="./img/logo1.jpg" alt="">
+    <img src="logo1.jpg" alt="">
     <div class="noti"><p>Coleção The New</p></div>
 
     <div class="produto">
         <a href="https://www.youtube.com">
             <div class="foto1">
-                <img src="./img/costa.png" alt="" class="imagem-produto">
+                <img src="costa.png" alt="" class="imagem-produto">
                 <div class="cami1">
                     <p>Camiseta Branca<div class="name1"><p>The New.(costas)</p></div></p>
                 </div>
@@ -24,7 +24,7 @@
     <div class="produto">
         <a href="https://www.youtube.com">
             <div class="foto1">
-                <img src="./img/create.png" alt="" class="imagem-produto">
+                <img src="create.png" alt="" class="imagem-produto">
                 <div class="cami1">
                     <p>Camiseta preta<div class="name1"><p>The Create.(costas)</p></div></p>
                 </div>
@@ -35,7 +35,7 @@
     <div class="produto">
         <a href="https://www.youtube.com">
             <div class="foto1">
-                <img src="./img/as3.png" alt="" class="imagem-produto">
+                <img src="as3.png" alt="" class="imagem-produto">
                 <div class="cami1">
                     <p>Camiseta Preta, branca e Roca<div class="name1"><p>Era Grega.</p></div></p>
                 </div>
