--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>50f Brand</title>
     <link rel="stylesheet" href="style.css">
-      <link rel="icon" href="logo1.png" type="image/x-icon">
+      <link rel="icon" href="logo1.jpg" type="image/x-icon">
 </head>
 <body>
     <img src="logo1.jpg" alt="">
